--- a/test.html
+++ b/test.html
@@ -3,50 +3,58 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Team Dashboard mit Webhooks</title>
+<title>Modernes Team Dashboard mit Webhooks</title>
 <style>
   body {
-    font-family: Arial, sans-serif;
-    background-color: #222;
-    color: #eee;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(135deg, #0d47a1, #1976d2);
+    color: #e3f2fd;
     margin: 0; padding: 0;
   }
   header {
-    background: #111;
-    padding: 20px;
+    background: rgba(13, 71, 161, 0.85);
+    padding: 25px;
     text-align: center;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
   }
   #auth, #dashboard {
     max-width: 450px;
-    margin: 20px auto;
-    background: #333;
-    padding: 20px;
-    border-radius: 10px;
+    margin: 30px auto;
+    background: rgba(25, 118, 210, 0.9);
+    padding: 25px;
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
   }
   input, select, button {
     width: 100%;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 6px;
+    padding: 12px 14px;
+    margin-top: 14px;
+    border-radius: 10px;
     border: none;
-    font-size: 1rem;
-  }
-  input, select {
-    background: #444;
-    color: #eee;
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #0d47a1;
+    background: #bbdefb;
+    transition: background-color 0.3s ease;
   }
   input::placeholder {
-    color: #bbb;
+    color: #1976d2;
+    font-weight: 400;
+  }
+  input:focus, select:focus {
+    outline: 2px solid #1565c0;
+    background: #e3f2fd;
   }
   button {
-    background: #0aa;
-    color: #fff;
-    font-weight: bold;
+    background: #0d47a1;
+    color: #e3f2fd;
+    font-weight: 700;
     cursor: pointer;
-    transition: background 0.3s ease;
+    box-shadow: 0 4px 12px rgba(13, 71, 161, 0.6);
   }
   button:hover {
-    background: #077;
+    background: #1565c0;
+    box-shadow: 0 6px 15px rgba(21, 101, 192, 0.8);
   }
   .hidden {
     display: none;
@@ -54,35 +62,60 @@
   ul {
     list-style: none;
     padding-left: 0;
+    margin-top: 14px;
   }
   li {
-    margin: 6px 0;
+    background: #bbdefb88;
+    margin: 8px 0;
+    padding: 10px 14px;
+    border-radius: 10px;
+    color: #0d47a1;
+    font-weight: 600;
   }
   .error {
-    color: #f44;
-    margin-top: 10px;
-    font-weight: bold;
+    color: #ff8a80;
+    margin-top: 12px;
+    font-weight: 700;
     text-align: center;
   }
   .success {
-    color: #4f4;
-    margin-top: 10px;
-    font-weight: bold;
+    color: #a5d6a7;
+    margin-top: 12px;
+    font-weight: 700;
     text-align: center;
   }
   .section {
-    margin-top: 25px;
+    margin-top: 28px;
   }
   label {
     display: block;
-    margin-top: 15px;
+    margin-top: 20px;
+    font-weight: 700;
+    color: #bbdefb;
+  }
+  #dashboard header p {
+    margin-top: 12px;
+    font-weight: 600;
+  }
+  #dashboard header p button {
+    background: #bbdefb;
+    color: #0d47a1;
+    font-weight: 600;
+    padding: 5px 12px;
+    margin-left: 15px;
+    border-radius: 10px;
+    box-shadow: none;
+    cursor: pointer;
+  }
+  #dashboard header p button:hover {
+    background: #90caf9;
   }
 </style>
 </head>
 <body>
 
 <div id="auth">
-  <header><h1>🔒 Team Login</h1></header>
+  <header><h1>🔐 Team Login</h1></header>
   <input type="text" id="username" placeholder="Benutzername" autocomplete="username" />
   <input type="password" id="password" placeholder="Passwort" autocomplete="current-password" />
   <button onclick="checkLogin()">Einloggen</button>
@@ -92,7 +125,7 @@
 <div id="dashboard" class="hidden">
   <header>
     <h1>📊 Team Dashboard</h1>
-    <p>Hallo, <span id="user-display"></span>! <button onclick="logout()" style="background:#a00; margin-left: 15px; padding: 5px 12px; font-weight: normal;">Logout</button></p>
+    <p>Willkommen, <span id="user-display"></span>! <button onclick="logout()">Logout</button></p>
   </header>
 
   <!-- Chef Bereich -->
@@ -202,7 +235,7 @@
       return;
     }
 
-    // Deine Discord Webhook-URL hier einfügen
+    // Webhook-URL für Aufgaben (bitte anpassen)
     const webhookURL = "https://discord.com/api/webhooks/1400610009720553472/iSq183mNu_o_o58oMtqg-i7vPvhnNimhP7e-LMBL7d0MkTGRqdiLo8oBKpaXA7OAMBzs";
 
     const payload = {
@@ -252,7 +285,7 @@
       return;
     }
 
-    // Deine Discord Webhook-URL hier einfügen
+    // Webhook-URL für Meetings (bitte anpassen)
     const webhookURL = "https://discord.com/api/webhooks/1400622177732136991/ysqu2zurdG1xbQ1t12mslOOH5OFCzLwD9bpBPoD6qZtmqFI07fGzF4xw33qPc0et7Q-I";
 
     const payload = {
