--- a/test.html
+++ b/test.html
@@ -1,177 +1,233 @@
-<!DOCTYPE html>
+   <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Modernes Team Dashboard mit Webhooks</title>
-<style>
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #0d47a1, #1976d2);
-    color: #e3f2fd;
-    margin: 0; padding: 0;
-  }
-  header {
-    background: rgba(13, 71, 161, 0.85);
-    padding: 25px;
-    text-align: center;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-  }
-  #auth, #dashboard {
-    max-width: 450px;
-    margin: 30px auto;
-    background: rgba(25, 118, 210, 0.9);
-    padding: 25px;
-    border-radius: 15px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-  }
-  input, select, button {
-    width: 100%;
-    padding: 12px 14px;
-    margin-top: 14px;
-    border-radius: 10px;
-    border: none;
-    font-size: 1.1rem;
-    font-weight: 600;
-    color: #0d47a1;
-    background: #bbdefb;
-    transition: background-color 0.3s ease;
-  }
-  input::placeholder {
-    color: #1976d2;
-    font-weight: 400;
-  }
-  input:focus, select:focus {
-    outline: 2px solid #1565c0;
-    background: #e3f2fd;
-  }
-  button {
-    background: #0d47a1;
-    color: #e3f2fd;
-    font-weight: 700;
-    cursor: pointer;
-    box-shadow: 0 4px 12px rgba(13, 71, 161, 0.6);
-  }
-  button:hover {
-    background: #1565c0;
-    box-shadow: 0 6px 15px rgba(21, 101, 192, 0.8);
-  }
-  .hidden {
-    display: none;
-  }
-  ul {
-    list-style: none;
-    padding-left: 0;
-    margin-top: 14px;
-  }
-  li {
-    background: #bbdefb88;
-    margin: 8px 0;
-    padding: 10px 14px;
-    border-radius: 10px;
-    color: #0d47a1;
-    font-weight: 600;
-  }
-  .error {
-    color: #ff8a80;
-    margin-top: 12px;
-    font-weight: 700;
-    text-align: center;
-  }
-  .success {
-    color: #a5d6a7;
-    margin-top: 12px;
-    font-weight: 700;
-    text-align: center;
-  }
-  .section {
-    margin-top: 28px;
-  }
-  label {
-    display: block;
-    margin-top: 20px;
-    font-weight: 700;
-    color: #bbdefb;
-  }
-  #dashboard header p {
-    margin-top: 12px;
-    font-weight: 600;
-  }
-  #dashboard header p button {
-    background: #bbdefb;
-    color: #0d47a1;
-    font-weight: 600;
-    padding: 5px 12px;
-    margin-left: 15px;
-    border-radius: 10px;
-    box-shadow: none;
-    cursor: pointer;
-  }
-  #dashboard header p button:hover {
-    background: #90caf9;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Team Dashboard</title>
+  <style>
+    :root {
+      --bg-dark: #121212;
+      --bg-light: #f5f5f5;
+      --text-dark: #fff;
+      --text-light: #000;
+      --primary: #00aaff;
+      --secondary: #1f1f1f;
+      --card-dark: #1a1a1a;
+      --card-light: #ffffff;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
+      transition: all 0.3s ease;
+    }
+
+    header {
+      background-color: var(--secondary);
+      padding: 20px;
+      text-align: center;
+    }
+
+    .container {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    section {
+      background-color: var(--card-dark);
+      padding: 20px;
+      border-radius: 12px;
+      margin-bottom: 30px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+      transition: background-color 0.3s ease;
+    }
+
+    h1, h2 {
+      margin-top: 0;
+      font-weight: 700;
+    }
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    li {
+      margin-bottom: 10px;
+      font-size: 1.1em;
+    }
+
+    input, button, select {
+      display: block;
+      margin: 10px auto;
+      padding: 12px;
+      width: 90%;
+      max-width: 350px;
+      border-radius: 8px;
+      border: none;
+      font-size: 1em;
+      box-sizing: border-box;
+      transition: background-color 0.3s ease, outline 0.3s ease;
+    }
+
+    input {
+      background-color: #eee;
+      color: #333;
+    }
+
+    input:focus, select:focus {
+      outline: 3px solid var(--primary);
+      background-color: #fff;
+    }
+
+    button {
+      background-color: var(--primary);
+      color: white;
+      cursor: pointer;
+      font-weight: 600;
+      box-shadow: 0 4px 8px rgba(0,170,255,0.4);
+      user-select: none;
+      transition: opacity 0.3s ease, transform 0.1s ease;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
+    button:active {
+      transform: scale(0.98);
+    }
+
+    .success {
+      color: limegreen;
+      font-weight: 600;
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    .error {
+      color: #ff4d4d;
+      font-weight: 600;
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    #dashboard { display: none; }
+
+    #error {
+      color: #ff4d4d;
+      text-align: center;
+      font-weight: 700;
+      margin-top: 10px;
+    }
+
+    .bereich { display: none; }
+
+    .toggle-theme {
+      position: fixed;
+      top: 12px;
+      right: 12px;
+      background-color: var(--primary);
+      color: white;
+      padding: 8px 16px;
+      border-radius: 6px;
+      font-size: 0.9em;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0,170,255,0.6);
+      user-select: none;
+      z-index: 1000;
+      transition: background-color 0.3s ease;
+    }
+
+    .toggle-theme:hover {
+      background-color: #008ecc;
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 1.5em; }
+      section { padding: 15px; }
+      button, input, select { width: 95%; max-width: none; }
+      .container { padding: 15px; }
+    }
+  </style>
 </head>
 <body>
 
 <div id="auth">
-  <header><h1>🔐 Team Login</h1></header>
-  <input type="text" id="username" placeholder="Benutzername" autocomplete="username" />
-  <input type="password" id="password" placeholder="Passwort" autocomplete="current-password" />
-  <button onclick="checkLogin()">Einloggen</button>
-  <p id="login-error" class="error"></p>
+  <header>
+    <h1>🔒 Team Dashboard Login</h1>
+    <input type="text" id="username" placeholder="Benutzername" autocomplete="username" />
+    <input type="password" id="password" placeholder="Passwort" autocomplete="current-password" />
+    <button onclick="checkLogin()">Einloggen</button>
+    <p id="error"></p>
+  </header>
 </div>
 
-<div id="dashboard" class="hidden">
+<div id="dashboard">
+  <button class="toggle-theme" onclick="toggleTheme()">🌗 Wechsel Theme</button>
+
   <header>
     <h1>📊 Team Dashboard</h1>
-    <p>Willkommen, <span id="user-display"></span>! <button onclick="logout()">Logout</button></p>
+    <p>Willkommen <span id="user-display"></span>! Du siehst hier deine Teamfunktionen.</p>
+    <button onclick="logout()">🚪 Logout</button>
   </header>
 
-  <!-- Chef Bereich -->
-  <div id="bereich-chef" class="section hidden">
-    <h2>📥 Neue Bewerbungen</h2>
-    <ul><li>Keine neuen Bewerbungen</li></ul>
+  <div class="container">
 
-    <h2>🔒 Admin & Chef Bereich</h2>
-    <ul>
-      <li>Servereinstellungen</li>
-      <li>Sicherheitsprotokolle</li>
-      <li>Blacklist verwalten</li>
-    </ul>
+    <section class="bereich chef">
+      <h2>📥 Neue Bewerbungen</h2>
+      <ul><li>Keine neuen Bewerbungen</li></ul>
+    </section>
 
-    <h2>📅 Team-Meeting planen</h2>
-    <label for="meeting-topic">Thema:</label>
-    <input type="text" id="meeting-topic" placeholder="z. B. Wochenplanung oder Sicherheitscheck" />
-    <label for="meeting-time">Zeitpunkt:</label>
-    <input type="text" id="meeting-time" placeholder="z. B. Freitag, 18:00 Uhr" />
-    <button onclick="meetingWebhook()">📨 Meeting senden</button>
-    <p id="meeting-status"></p>
+    <section class="bereich team">
+      <h2>🗂 Aufgabe abschließen</h2>
+      <label for="task-select">Welche Aufgabe wurde erledigt?</label>
+      <select id="task-select">
+        <option value="">-- Bitte auswählen --</option>
+        <option value="Tickets beantworten">Tickets beantworten</option>
+        <option value="test">test2993</option>
+         <option value="Letzte Besprechung dokumentieren">Letzte Besprechung dokumentieren</option>
+        <option value="Neues Mitglied geprüft">Neues Mitglied geprüft</option>
+      </select>
+      <label for="task-comment">Kommentar (optional):</label>
+      <input type="text" id="task-comment" placeholder="Kommentar zur Aufgabe..." />
+      <button onclick="abschliessen()">✅ Aufgabe abschließen</button>
+      <p id="task-status"></p>
+    </section>
+
+    <section class="bereich team">
+      <h2>👥 Teamliste</h2>
+      <ul>
+        <li>doge43 (Team)</li>
+        <li>mandalorian281 (Team)</li>
+        <li>mathias09144_45205 (Team)</li>
+      </ul>
+    </section>
+
+    <section class="bereich chef">
+      <h2>🔒 Admin & Chef Bereich</h2>
+      <ul>
+        <li>Servereinstellungen</li>
+        <li>Sicherheitsprotokolle</li>
+        <li>Blacklist verwalten</li>
+      </ul>
+    </section>
+
+    <section class="bereich chef">
+      <h2>📅 Team-Meeting planen</h2>
+      <label for="meeting-topic">Thema des Meetings:</label>
+      <input type="text" id="meeting-topic" placeholder="z. B. Wochenplanung oder Sicherheitscheck" />
+      <label for="meeting-time">Zeitpunkt:</label>
+      <input type="text" id="meeting-time" placeholder="z. B. Freitag, 18:00 Uhr" />
+      <button onclick="meetingWebhook()">📨 An Discord senden</button>
+      <p id="meeting-status"></p>
+    </section>
+
   </div>
-
-  <!-- Team Bereich -->
-  <div id="bereich-team" class="section hidden">
-    <h2>🗂 Aufgabe abschließen</h2>
-    <label for="task-select">Aufgabe wählen:</label>
-    <select id="task-select">
-      <option value="">-- Bitte auswählen --</option>
-      <option value="Tickets beantworten">Tickets beantworten</option>
-      <option value="Letzte Besprechung dokumentieren">Letzte Besprechung dokumentieren</option>
-      <option value="Neues Mitglied geprüft">Neues Mitglied geprüft</option>
-    </select>
-    <label for="task-comment">Kommentar (optional):</label>
-    <input type="text" id="task-comment" placeholder="Kommentar..." />
-    <button onclick="abschliessen()">✅ Aufgabe abschließen</button>
-    <p id="task-status"></p>
-
-    <h2>👥 Teammitglieder</h2>
-    <ul>
-      <li>doge43 (Team)</li>
-      <li>mandalorian281 (Team)</li>
-      <li>mathias09144_45205 (Team)</li>
-    </ul>
-  </div>
-
 </div>
 
 <script>
@@ -186,69 +242,84 @@
   function checkLogin() {
     const username = document.getElementById("username").value.trim();
     const password = document.getElementById("password").value.trim();
-    const err = document.getElementById("login-error");
+    const errorElem = document.getElementById("error");
 
-    if(users[username] && users[username].password === password) {
-      document.getElementById("auth").classList.add("hidden");
-      document.getElementById("dashboard").classList.remove("hidden");
+    if (users[username] && users[username].password === password) {
+      document.getElementById("auth").style.display = "none";
+      document.getElementById("dashboard").style.display = "block";
       document.getElementById("user-display").textContent = username;
 
       const role = users[username].role;
+
+      // Chef sieht alle Bereiche
       if(role === "chef") {
-        document.getElementById("bereich-chef").classList.remove("hidden");
-        document.getElementById("bereich-team").classList.remove("hidden");
+        document.querySelectorAll(".bereich").forEach(s => s.style.display = "block");
       } else {
-        document.getElementById("bereich-chef").classList.add("hidden");
-        document.getElementById("bereich-team").classList.remove("hidden");
+        // Nur eigene Bereich anzeigen
+        document.querySelectorAll(".bereich").forEach(s => s.style.display = "none");
+        document.querySelectorAll(`.bereich.${role}`).forEach(s => s.style.display = "block");
       }
 
-      err.textContent = "";
+      errorElem.textContent = "";
     } else {
-      err.textContent = "Benutzername oder Passwort falsch!";
+      errorElem.textContent = "Benutzername oder Passwort falsch!";
     }
   }
 
   function logout() {
-    document.getElementById("auth").classList.remove("hidden");
-    document.getElementById("dashboard").classList.add("hidden");
+    document.getElementById("auth").style.display = "block";
+    document.getElementById("dashboard").style.display = "none";
     document.getElementById("username").value = "";
     document.getElementById("password").value = "";
-    document.getElementById("login-error").textContent = "";
-    clearStatusMessages();
+    document.getElementById("error").textContent = "";
   }
 
-  function clearStatusMessages() {
-    document.getElementById("task-status").textContent = "";
-    document.getElementById("meeting-status").textContent = "";
+  function toggleTheme() {
+    const root = document.documentElement;
+    // check current theme by bg color
+    const currentBg = getComputedStyle(root).getPropertyValue('--bg-dark').trim();
+
+    if (currentBg === '#121212') {
+      root.style.setProperty('--bg-dark', '#f5f5f5');
+      root.style.setProperty('--text-dark', '#000');
+      root.style.setProperty('--card-dark', '#ffffff');
+      root.style.setProperty('--secondary', '#e0e0e0');
+    } else {
+      root.style.setProperty('--bg-dark', '#121212');
+      root.style.setProperty('--text-dark', '#fff');
+      root.style.setProperty('--card-dark', '#1a1a1a');
+      root.style.setProperty('--secondary', '#1f1f1f');
+    }
   }
 
-  // Webhook für Aufgaben erledigen
   function abschliessen() {
-    const task = document.getElementById("task-select").value;
+    const selectedTask = document.getElementById("task-select").value;
     const comment = document.getElementById("task-comment").value.trim();
-    const status = document.getElementById("task-status");
+    const statusElem = document.getElementById("task-status");
     const username = document.getElementById("user-display").textContent;
 
-    if(!task) {
-      status.textContent = "Bitte eine Aufgabe auswählen.";
-      status.className = "error";
+    if (!selectedTask) {
+      statusElem.textContent = "❗ Bitte wähle eine Aufgabe aus.";
+      statusElem.className = "error";
       return;
     }
 
-    // Webhook-URL für Aufgaben (bitte anpassen)
+    // Discord Webhook URL (bitte deine eigene hier einfügen!)
     const webhookURL = "https://discord.com/api/webhooks/1400610009720553472/iSq183mNu_o_o58oMtqg-i7vPvhnNimhP7e-LMBL7d0MkTGRqdiLo8oBKpaXA7OAMBzs";
 
     const payload = {
-      embeds: [{
-        title: "✅ Aufgabe erledigt",
-        color: 65280,
-        fields: [
-          { name: "Erledigt von", value: username, inline: true },
-          { name: "Aufgabe", value: task, inline: true },
-          { name: "Kommentar", value: comment || "Kein Kommentar" }
-        ],
-        timestamp: new Date().toISOString()
-      }]
+      embeds: [
+        {
+          title: "✅ Aufgabe erledigt",
+          color: 0x00ff66,
+          fields: [
+            { name: "Erledigt von", value: username, inline: true },
+            { name: "Aufgabe", value: selectedTask, inline: true },
+            { name: "Kommentar", value: comment || "Kein Kommentar" }
+          ],
+          timestamp: new Date().toISOString()
+        }
+      ]
     };
 
     fetch(webhookURL, {
@@ -257,71 +328,73 @@
       body: JSON.stringify(payload)
     })
     .then(res => {
-      if(res.ok) {
-        status.textContent = "Aufgabe erfolgreich gemeldet!";
-        status.className = "success";
+      if (res.ok) {
+        statusElem.textContent = "✅ Aufgabe wurde gemeldet!";
+        statusElem.className = "success";
         document.getElementById("task-select").value = "";
         document.getElementById("task-comment").value = "";
       } else {
-        throw new Error("Fehler beim Senden");
+        throw new Error("Webhook-Fehler");
       }
     })
-    .catch(() => {
-      status.textContent = "Fehler beim Senden!";
-      status.className = "error";
+    .catch(err => {
+      console.error(err);
+      statusElem.textContent = "⚠️ Fehler beim Senden!";
+      statusElem.className = "error";
     });
   }
 
-  // Webhook für Meeting planen
   function meetingWebhook() {
     const topic = document.getElementById("meeting-topic").value.trim();
     const time = document.getElementById("meeting-time").value.trim();
-    const username = document.getElementById("user-display").textContent;
+    const user = document.getElementById("user-display").textContent;
     const status = document.getElementById("meeting-status");
 
-    if(!topic || !time) {
-      status.textContent = "Bitte Thema und Zeitpunkt angeben.";
+    if (!topic || !time) {
+      status.textContent = "❗ Bitte Thema und Zeitpunkt eingeben.";
       status.className = "error";
       return;
     }
 
-    // Webhook-URL für Meetings (bitte anpassen)
-    const webhookURL = "https://discord.com/api/webhooks/1400622177732136991/ysqu2zurdG1xbQ1t12mslOOH5OFCzLwD9bpBPoD6qZtmqFI07fGzF4xw33qPc0et7Q-I";
+    // Discord Webhook URL (bitte deine eigene hier einfügen!)
+    const meetingWebhookURL = "https://discord.com/api/webhooks/1400622177732136991/ysqu2zurdG1xbQ1t12mslOOH5OFCzLwD9bpBPoD6qZtmqFI07fGzF4xw33qPc0et7Q-I";
 
-    const payload = {
-      embeds: [{
-        title: "📅 Neues Team-Meeting geplant",
-        color: 255,
-        fields: [
-          { name: "Thema", value: topic },
-          { name: "Zeitpunkt", value: time },
-          { name: "Geplant von", value: username }
-        ],
-        timestamp: new Date().toISOString()
-      }]
+    const meetingPayload = {
+      embeds: [
+        {
+          title: "📅 Neues Team-Meeting geplant",
+          color: 0x0099ff,
+          fields: [
+            { name: "Thema", value: topic },
+            { name: "Zeit", value: time },
+            { name: "Geplant von", value: user }
+          ],
+          timestamp: new Date().toISOString()
+        }
+      ]
     };
 
-    fetch(webhookURL, {
+    fetch(meetingWebhookURL, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(payload)
+      body: JSON.stringify(meetingPayload)
     })
     .then(res => {
-      if(res.ok) {
-        status.textContent = "Meeting erfolgreich gesendet!";
+      if (res.ok) {
+        status.textContent = "✅ Meeting wurde gesendet!";
         status.className = "success";
         document.getElementById("meeting-topic").value = "";
         document.getElementById("meeting-time").value = "";
       } else {
-        throw new Error("Fehler beim Senden");
+        throw new Error("Webhook-Fehler");
       }
     })
-    .catch(() => {
-      status.textContent = "Fehler beim Senden!";
+    .catch(err => {
+      console.error(err);
+      status.textContent = "⚠️ Fehler beim Senden!";
       status.className = "error";
     });
   }
 </script>
-
 </body>
 </html>
